libsrc/rlib.h

struct rlib_from_xml {
	xmlChar *xml;
	gint line;
};
struct rlib_part {
	struct rlib_from_xml xml_name;
	struct rlib_from_xml xml_pages_across;
	struct rlib_from_xml xml_orientation;
	struct rlib_from_xml xml_top_margin;
	struct rlib_from_xml xml_left_margin;
	struct rlib_from_xml xml_bottom_margin;
	struct rlib_from_xml xml_paper_type;
	struct rlib_from_xml xml_font_size;
	struct rlib_from_xml xml_iterations;
	struct rlib_from_xml xml_suppress_page_header_first_page;
	struct rlib_from_xml xml_suppress;

	GSList *part_rows;
	struct rlib_element *report_header;
	struct rlib_element *page_header;
	struct rlib_element *page_footer;

	struct rlib_pcode *name_code;
	struct rlib_pcode *pages_across_code;
	struct rlib_pcode *orientation_code;
	struct rlib_pcode *top_margin_code;
	struct rlib_pcode *left_margin_code;
	struct rlib_pcode *bottom_margin_code;
	struct rlib_pcode *paper_type_code;
	struct rlib_pcode *font_size_code;
	struct rlib_pcode *iterations_code;
	struct rlib_pcode *suppress_page_header_first_page_code;
	struct rlib_pcode *suppress_code;

	struct rlib_paper *paper;
	gint orientation;
	gint font_size;
	gint pages_across;
	gint iterations;
	gboolean suppress;
	gboolean has_only_one_report;
	struct rlib_report *only_report;
	gfloat *position_top;
	gfloat *position_bottom;
	gfloat *bottom_size;
	gfloat top_margin;
	gfloat bottom_margin;
	gfloat left_margin;
	gint landscape;
	gint suppress_page_header_first_page;

};
struct rlib_graph {
	struct rlib_from_xml xml_name;
	struct rlib_from_xml xml_type;
	struct rlib_from_xml xml_subtype;
	struct rlib_from_xml xml_width;
	struct rlib_from_xml xml_height;
	struct rlib_from_xml xml_title;
	struct rlib_from_xml xml_bold_titles;
	struct rlib_from_xml xml_legend_bg_color;
	struct rlib_from_xml xml_legend_orientation;
	struct rlib_from_xml xml_draw_x_line;
	struct rlib_from_xml xml_draw_y_line;
	struct rlib_from_xml xml_grid_color;
	struct rlib_from_xml xml_x_axis_title;
	struct rlib_from_xml xml_y_axis_title;
	struct rlib_from_xml xml_y_axis_mod;
	struct rlib_from_xml xml_y_axis_title_right;
	struct rlib_from_xml xml_y_axis_decimals;
	struct rlib_from_xml xml_y_axis_decimals_right;
	struct rlib_pcode *name_code;
	struct rlib_pcode *type_code;
	struct rlib_pcode *subtype_code;
	struct rlib_pcode *width_code;
	struct rlib_pcode *height_code;
	struct rlib_pcode *title_code;
	struct rlib_pcode *bold_titles_code;
	struct rlib_pcode *legend_bg_color_code;
	struct rlib_pcode *legend_orientation_code;
	struct rlib_pcode *draw_x_line_code;
	struct rlib_pcode *draw_y_line_code;
	struct rlib_pcode *grid_color_code;
	struct rlib_pcode *x_axis_title_code;
	struct rlib_pcode *y_axis_title_code;
	struct rlib_pcode *y_axis_mod_code;
	struct rlib_pcode *y_axis_title_right_code;
	struct rlib_pcode *y_axis_decimals_code;
	struct rlib_pcode *y_axis_decimals_code_right;
	GSList *plots;
};
struct rlib_report {
	xmlDocPtr doc;
	gchar *contents;
	struct rlib_from_xml xml_font_size;
	struct rlib_from_xml xml_query;
	struct rlib_from_xml xml_orientation;
	struct rlib_from_xml xml_top_margin;
	struct rlib_from_xml xml_left_margin;
	struct rlib_from_xml xml_bottom_margin;
	struct rlib_from_xml xml_pages_across;
	struct rlib_from_xml xml_detail_columns;
	struct rlib_from_xml xml_column_pad;
	struct rlib_from_xml xml_suppress_page_header_first_page;
	struct rlib_from_xml xml_suppress;
	struct rlib_from_xml xml_height;
	struct rlib_from_xml xml_iterations;
	struct rlib_from_xml xml_uniquerow;

	gfloat *position_top;
	gfloat *position_bottom;
	gfloat *bottom_size;

	gint main_loop_query;
	gint raw_page_number;

	gint orientation;
	gint font_size;
	gint detail_columns;
	gfloat column_pad;
	gfloat top_margin;
	gfloat bottom_margin;
	gfloat left_margin;
	gfloat page_width;
	gint iterations;
	gint pages_across;
	gboolean suppress_page_header_first_page;
	gboolean suppress;
	gboolean is_the_only_report;
	struct rlib_pcode *iterations_code;
	struct rlib_value uniquerow;

	struct rlib_element *report_header;
	struct rlib_element *page_header;
	struct rlib_report_detail detail;
	struct rlib_element *page_footer;
	struct rlib_element *report_footer;
	struct rlib_element *variables;

	struct rlib_element *breaks;
	struct rlib_report_alternate alternate;
	struct rlib_graph graph;
	struct rlib_chart chart;
	gint mainloop_query;

	struct rlib_pcode *font_size_code;
	struct rlib_pcode *query_code;
	struct rlib_pcode *orientation_code;
	struct rlib_pcode *detail_columns_code;
	struct rlib_pcode *column_pad_code;
	struct rlib_pcode *height_code;
	struct rlib_pcode *top_margin_code;
	struct rlib_pcode *left_margin_code;
	struct rlib_pcode *bottom_margin_code;
	struct rlib_pcode *pages_across_code;
	struct rlib_pcode *suppress_page_header_first_page_code;
	struct rlib_pcode *suppress_code;
	struct rlib_pcode *uniquerow_code;

};
struct rlib;
typedef struct rlib rlib;
struct rlib {
	gint current_page_number;
	gint current_line_number;
	gint detail_line_count;
	gint start_of_new_report;

	gint font_point;

	gint current_font_point;

	GHashTable *parameters;
	GHashTable *output_parameters;
	GHashTable *input_metadata;
	GSList *pcode_functions;

	GIConv output_encoder;
	gchar *output_encoder_name;

	time_t now; /* set when rlib starts now will then be a constant over the time of the report */

	struct rlib_signal_functions signal_functions[RLIB_SIGNALS];

	struct rlib_queries **queries;

	gint queries_count;
	struct rlib_rip_reports reportstorun[RLIB_MAXIMUM_REPORTS];
	struct rlib_results **results;

	struct rlib_part *parts[RLIB_MAXIMUM_REPORTS];
	gint parts_count;

	gint current_result;

	gint resultset_followers_count;
	struct rlib_resultset_followers followers[RLIB_MAXIMUM_FOLLOWERS];

	gint format;
	gint inputs_count;
	gboolean did_execute;

	gchar *special_locale;
	gchar *current_locale;

	gint html_debugging;

	struct output_filter *o;
	struct input_filters inputs[MAX_INPUT_FILTERS];
	struct environment_filter *environment;
	GSList *graph_regions;
	GSList *graph_minor_x_ticks;

	gint pcode_alpha_index;
	gint pcode_alpha_m_index;

	GIConv xml_encoder;
};
gboolean rlib_query_refresh(rlib *r);
gboolean rlib_signal_connect_string(rlib *r, gchar *signal_name, gboolean (*signal_function)(rlib *, gpointer), gpointer data);
gboolean rlib_signal_connect(rlib *r, gint signal_number, gboolean (*signal_function)(rlib *, gpointer), gpointer data);
gint rlib_add_parameter(rlib *r, const gchar *name, const gchar *value);
gint rlib_set_locale(rlib *r, gchar *locale);
gchar * rlib_bindtextdomain(rlib *r, gchar *domainname, gchar *dirname);
const gchar *rlib_version(void); /* returns the version string. */
gint rlib_set_datasource_encoding(rlib *r, gchar *input_name, gchar *encoding);
void rlib_set_output_encoding(rlib *r, const char *encoding);
void rlib_set_output_parameter(rlib *r, gchar *parameter, gchar *value);
gint rlib_graph_add_bg_region(rlib *r, gchar *graph_name, gchar *region_label, gchar *color, gfloat start, gfloat end);
gint rlib_graph_clear_bg_region(rlib *r, gchar *graph_name);
gint rlib_graph_set_x_minor_tick(rlib *r, gchar *graph_name, gchar *x_value);
gint rlib_graph_set_x_minor_tick_by_location(rlib *r, gchar *graph_name, gint location);
/***** PROTOTYPES: free.c *****************************************************/
int rlib_free(rlib *r);
/***** PROTOTYPES: graphing.c **************************************************/
gfloat rlib_graph(rlib *r, struct rlib_part *part, struct rlib_report *report, gfloat left_margin_offset, gfloat *top_margin_offset);
void rlogit_setmessagewriter(void(*writer)(rlib *r, const gchar *msg));