bindings/interfaces/rlibPINVOKE.cs


  [DllImport("rlibcsharp", EntryPoint="CSharp_rlib_signal_connect")]
  public static extern int rlib_signal_connect(HandleRef jarg1, int jarg2, HandleRef jarg3, HandleRef jarg4);

  [DllImport("rlibcsharp", EntryPoint="CSharp_rlib_signal_connect_string")]
  public static extern int rlib_signal_connect_string(HandleRef jarg1, string jarg2, HandleRef jarg3, HandleRef jarg4);

  [DllImport("rlibcsharp", EntryPoint="CSharp_rlib_query_refresh")]
  public static extern int rlib_query_refresh(HandleRef jarg1);

  [DllImport("rlibcsharp", EntryPoint="CSharp_rlib_add_parameter")]
  public static extern int rlib_add_parameter(HandleRef jarg1, string jarg2, string jarg3);

  [DllImport("rlibcsharp", EntryPoint="CSharp_rlib_set_locale")]
  public static extern int rlib_set_locale(HandleRef jarg1, string jarg2);

  [DllImport("rlibcsharp", EntryPoint="CSharp_rlib_bindtextdomain")]
  public static extern int rlib_bindtextdomain(HandleRef jarg1, string jarg2, string jarg3);

  [DllImport("rlibcsharp", EntryPoint="CSharp_rlib_set_output_parameter")]
  public static extern void rlib_set_output_parameter(HandleRef jarg1, string jarg2, string jarg3);

  [DllImport("rlibcsharp", EntryPoint="CSharp_rlib_set_output_encoding")]
  public static extern void rlib_set_output_encoding(HandleRef jarg1, string jarg2);

  [DllImport("rlibcsharp", EntryPoint="CSharp_rlib_set_datasource_encoding")]
  public static extern int rlib_set_datasource_encoding(HandleRef jarg1, string jarg2, string jarg3);

  [DllImport("rlibcsharp", EntryPoint="CSharp_rlib_free")]
  public static extern int rlib_free(HandleRef jarg1);

  [DllImport("rlibcsharp", EntryPoint="CSharp_rlib_version")]
  public static extern string rlib_version();

  [DllImport("rlibcsharp", EntryPoint="CSharp_rlib_graph_add_bg_region")]
  public static extern int rlib_graph_add_bg_region(HandleRef jarg1, string jarg2, string jarg3, string jarg4, float jarg5, float jarg6);

  [DllImport("rlibcsharp", EntryPoint="CSharp_rlib_graph_clear_bg_region")]
  public static extern int rlib_graph_clear_bg_region(HandleRef jarg1, string jarg2);

  [DllImport("rlibcsharp", EntryPoint="CSharp_rlib_graph_set_x_minor_tick")]
  public static extern int rlib_graph_set_x_minor_tick(HandleRef jarg1, string jarg2, string jarg3);

  [DllImport("rlibcsharp", EntryPoint="CSharp_rlib_graph_set_x_minor_tick_by_location")]
  public static extern int rlib_graph_set_x_minor_tick_by_location(HandleRef jarg1, string jarg2, int jarg3);

  [DllImport("rlibcsharp", EntryPoint="CSharp_rlib_graph")]
  public static extern float rlib_graph(HandleRef jarg1, HandleRef jarg2, HandleRef jarg3, float jarg4, HandleRef jarg5);
}
